@@ -18,7 +18,7 @@
     <!-- Baseline Jenkins version you use to build the plugin. Users must have this version or newer to run. -->
     <jenkins.version>1.599</jenkins.version>
     <!-- Java Level to use. Java 7 required when using core >= 1.612 -->
-    <java.level>7</java.level>
+    <java.level>8</java.level>
     <!-- Jenkins Test Harness version you use to test the plugin. -->
     <!-- For Jenkins version >= 1.580.1 use JTH 2.x or higher. -->
     <jenkins-test-harness.version>2.13</jenkins-test-harness.version>
@@ -134,209 +134,6 @@
         <artifactId>jenkins-test-harness-htmlunit</artifactId>
         <version>2.18-1</version>
       </dependency>
-      <dependency>
-        <groupId>alien4cloud</groupId>
-        <artifactId>a4c-sm23-1.0.0-migration-tools</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
-      </dependency>
     </dependencies>
-
-
-  <profiles>
-    <profile>
-      <id>idea</id>
-      <dependencies>
-        <!--<dependency>
-          <groupId>alien4cloud</groupId>
-          <artifactId>alien4cloud-ui</artifactId>
-          <version>${project.version}</version>
-          <scope>compile</scope>
-        </dependency>
-        <dependency>
-          <groupId>alien4cloud</groupId>
-          <artifactId>alien4cloud-rest-api</artifactId>
-          <version>${project.version}</version>
-          <scope>compile</scope>
-        </dependency>
-        <dependency>
-          <groupId>alien4cloud</groupId>
-          <artifactId>alien4cloud-core</artifactId>
-          <version>${project.version}</version>
-          <scope>compile</scope>
-        </dependency>-->
-        <dependency>
-          <groupId>org.eclipse.jetty</groupId>
-          <artifactId>jetty-webapp</artifactId>
-          <scope>compile</scope>
-        </dependency>
-        <dependency>
-          <groupId>org.eclipse.jetty</groupId>
-          <artifactId>jetty-util</artifactId>
-          <scope>compile</scope>
-        </dependency>
-        <dependency>
-          <groupId>org.eclipse.jetty.websocket</groupId>
-          <artifactId>websocket-server</artifactId>
-          <scope>compile</scope>
-        </dependency>
-        <dependency>
-          <groupId>javax.servlet</groupId>
-          <artifactId>javax.servlet-api</artifactId>
-          <scope>compile</scope>
-        </dependency>
-        <!--<dependency>
-          <groupId>alien4cloud</groupId>
-          <artifactId>alien4cloud-provider-int-test</artifactId>
-          <version>${project.version}</version>
-          <classifier>tests</classifier>
-          <scope>test</scope>
-        </dependency>-->
-        <dependency>
-          <groupId>info.cukes</groupId>
-          <artifactId>cucumber-picocontainer</artifactId>
-          <version>1.2.2</version>
-          <scope>test</scope>
-        </dependency>
-        <dependency>
-          <groupId>info.cukes</groupId>
-          <artifactId>cucumber-junit</artifactId>
-          <version>1.2.2</version>
-          <scope>test</scope>
-        </dependency>
-      </dependencies>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>build-helper-maven-plugin</artifactId>
-            <executions>
-              <execution>
-                <id>add-source</id>
-                <phase>generate-sources</phase>
-                <goals>
-                  <goal>add-source</goal>
-                </goals>
-                <configuration>
-                  <sources>
-                    <source>src/test/managed-plugin-java</source>
-                  </sources>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-    <profile>
-      <id>do-test</id>
-      <activation>
-        <property>
-          <name>doTest</name>
-        </property>
-      </activation>
-      <!--<dependencies>
-        <dependency>
-          <groupId>alien4cloud</groupId>
-          <artifactId>alien4cloud-provider-int-test</artifactId>
-          <version>${project.version}</version>
-        </dependency>
-      </dependencies>-->
-      <build>
-        <plugins>
-          <plugin>
-            <artifactId>maven-antrun-plugin</artifactId>
-            <version>1.7</version>
-            <executions>
-              <execution>
-                <id>clean-test-data</id>
-                <phase>pre-integration-test</phase>
-                <configuration>
-                  <tasks>
-                    <delete includeemptydirs="true" failonerror="false">
-                      <fileset dir="${user.home}/.alien" includes="**/*" />
-                    </delete>
-                  </tasks>
-                </configuration>
-                <goals>
-                  <goal>run</goal>
-                </goals>
-              </execution>
-            </executions>
-          </plugin>
-          <plugin>
-            <groupId>org.codehaus.cargo</groupId>
-            <artifactId>cargo-maven2-plugin</artifactId>
-            <!--<version>${maven.cargo.version}</version>-->
-            <executions>
-              <execution>
-                <id>start-jetty</id>
-                <phase>pre-integration-test</phase>
-                <goals>
-                  <goal>start</goal>
-                </goals>
-              </execution>
-              <execution>
-                <id>stop-jetty</id>
-                <phase>post-integration-test</phase>
-                <goals>
-                  <goal>stop</goal>
-                </goals>
-              </execution>
-            </executions>
-            <configuration>
-              <container>
-                <containerId>jetty9x</containerId>
-                <artifactInstaller>
-                  <groupId>org.eclipse.jetty</groupId>
-                  <artifactId>jetty-distribution</artifactId>
-                  <!--<version>${jetty.version}</version>-->
-                </artifactInstaller>
-                <log>${basedir}/target/cargo.log</log>
-                <output>${basedir}/target/jetty.log</output>
-              </container>
-
-              <configuration>
-                <properties>
-                  <cargo.servlet.port>8088</cargo.servlet.port>
-                  <cargo.logging>high</cargo.logging>
-                  <cargo.jvmargs>-Denv=ittest -Dspring.profiles.active=security-demo -Xdebug</cargo.jvmargs>
-                </properties>
-              </configuration>
-
-              <deployables>
-                <deployable>
-                  <groupId>alien4cloud</groupId>
-                  <artifactId>alien4cloud-rest-it</artifactId>
-                  <type>war</type>
-                  <pingURL>http://localhost:8088/rest/auth/status</pingURL>
-                  <pingTimeout>60000</pingTimeout>
-                  <!-- 5 min, time to deploy -->
-                  <properties>
-                    <context>/</context>
-                  </properties>
-                </deployable>
-              </deployables>
-            </configuration>
-          </plugin>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-failsafe-plugin</artifactId>
-            <version>2.16</version>
-            <configuration>
-              <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
-            </configuration>
-            <executions>
-              <execution>
-                <goals>
-                  <goal>integration-test</goal>
-                  <goal>verify</goal>
-                </goals>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-  </profiles>
 
 </project>
